--- a/SOL_PROYECTOBASES/PROYECTOBASES/PROYECTOBASES.csproj
+++ b/SOL_PROYECTOBASES/PROYECTOBASES/PROYECTOBASES.csproj
@@ -49,17 +49,33 @@
     <Compile Include="Datos\conexion.cs" />
     <Compile Include="Datos\D_Tienda.cs" />
     <Compile Include="Entidades\E_Tienda.cs" />
+    <Compile Include="Presentacion\Frm_CrearVendedor.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Presentacion\Frm_CrearVendedor.Designer.cs">
+      <DependentUpon>Frm_CrearVendedor.cs</DependentUpon>
+    </Compile>
     <Compile Include="Presentacion\Frm_EliminarTienda.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Presentacion\Frm_EliminarTienda.Designer.cs">
       <DependentUpon>Frm_EliminarTienda.cs</DependentUpon>
     </Compile>
+    <Compile Include="Presentacion\Frm_EliminarVendedor.cs" />
+    <Compile Include="Presentacion\Frm_EliminarVendedor.Designer.cs">
+      <DependentUpon>Frm_EliminarVendedor.cs</DependentUpon>
+    </Compile>
     <Compile Include="Presentacion\Frm_ModificarTienda.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Presentacion\Frm_ModificarTienda.Designer.cs">
       <DependentUpon>Frm_ModificarTienda.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Presentacion\Frm_ModificarVendedor.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Presentacion\Frm_ModificarVendedor.Designer.cs">
+      <DependentUpon>Frm_ModificarVendedor.cs</DependentUpon>
     </Compile>
     <Compile Include="Presentacion\Frm_Principal.cs">
       <SubType>Form</SubType>
@@ -75,11 +91,20 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Presentacion\Frm_CrearVendedor.resx">
+      <DependentUpon>Frm_CrearVendedor.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Presentacion\Frm_EliminarTienda.resx">
       <DependentUpon>Frm_EliminarTienda.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Presentacion\Frm_EliminarVendedor.resx">
+      <DependentUpon>Frm_EliminarVendedor.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Presentacion\Frm_ModificarTienda.resx">
       <DependentUpon>Frm_ModificarTienda.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Presentacion\Frm_ModificarVendedor.resx">
+      <DependentUpon>Frm_ModificarVendedor.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Presentacion\Frm_Principal.resx">
       <DependentUpon>Frm_Principal.cs</DependentUpon>
