--- a/SOL_PROYECTOBASES/PROYECTOBASES/PROYECTOBASES.csproj
+++ b/SOL_PROYECTOBASES/PROYECTOBASES/PROYECTOBASES.csproj
@@ -47,8 +47,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Datos\conexion.cs" />
+    <Compile Include="Datos\D_Producto.cs" />
     <Compile Include="Datos\D_Tienda.cs" />
+    <Compile Include="Datos\D_Vendedor.cs" />
     <Compile Include="Entidades\E_Tienda.cs" />
+    <Compile Include="Presentacion\Frm_CrearProducto.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Presentacion\Frm_CrearProducto.Designer.cs">
+      <DependentUpon>Frm_CrearProducto.cs</DependentUpon>
+    </Compile>
     <Compile Include="Presentacion\Frm_EliminarTienda.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -67,11 +75,11 @@
     <Compile Include="Presentacion\Frm_Principal.Designer.cs">
       <DependentUpon>Frm_Principal.cs</DependentUpon>
     </Compile>
-    <Compile Include="Presentacion\Frm_Tienda.cs">
+    <Compile Include="Presentacion\Frm_CrearTienda.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Presentacion\Frm_Tienda.Designer.cs">
-      <DependentUpon>Frm_Tienda.cs</DependentUpon>
+    <Compile Include="Presentacion\Frm_CrearTienda.Designer.cs">
+      <DependentUpon>Frm_CrearTienda.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -84,8 +92,8 @@
     <EmbeddedResource Include="Presentacion\Frm_Principal.resx">
       <DependentUpon>Frm_Principal.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Presentacion\Frm_Tienda.resx">
-      <DependentUpon>Frm_Tienda.cs</DependentUpon>
+    <EmbeddedResource Include="Presentacion\Frm_CrearTienda.resx">
+      <DependentUpon>Frm_CrearTienda.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
