--- a/SOL_PROYECTOBASES/PROYECTOBASES/PROYECTOBASES.csproj
+++ b/SOL_PROYECTOBASES/PROYECTOBASES/PROYECTOBASES.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Datos\D_Producto.cs" />
     <Compile Include="Datos\D_Tienda.cs" />
     <Compile Include="Datos\D_Vendedor.cs" />
+    <Compile Include="Datos\V_Inventario.cs" />
     <Compile Include="Entidades\E_Tienda.cs" />
     <Compile Include="Presentacion\Frm_CrearProducto.cs">
       <SubType>Form</SubType>
@@ -86,6 +87,12 @@
     </Compile>
     <Compile Include="Presentacion\Frm_EliminarVendedor.Designer.cs">
       <DependentUpon>Frm_EliminarVendedor.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Presentacion\Frm_Inventario.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Presentacion\Frm_Inventario.Designer.cs">
+      <DependentUpon>Frm_Inventario.cs</DependentUpon>
     </Compile>
     <Compile Include="Presentacion\Frm_ModificarProducto.cs">
       <SubType>Form</SubType>
@@ -130,6 +137,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Presentacion\Frm_EliminarVendedor.resx">
       <DependentUpon>Frm_EliminarVendedor.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Presentacion\Frm_Inventario.resx">
+      <DependentUpon>Frm_Inventario.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Presentacion\Frm_ModificarProducto.resx">
       <DependentUpon>Frm_ModificarProducto.cs</DependentUpon>
